--- a/orders/templates/orders/order_list_wizard_button.html
+++ b/orders/templates/orders/order_list_wizard_button.html
@@ -1,5 +1,5 @@
-<!-- زر الويزارد لإضافة في قائمة الطلبات -->
-<a href="{% url 'orders:wizard_start' %}" class="btn btn-primary btn-lg me-2">
+<!-- زر إنشاء طلب إلكتروني -->
+<a href="{% url 'orders:wizard_start' %}" class="btn btn-success btn-lg me-2">
     <i class="fas fa-magic me-2"></i>
-    إنشاء طلب جديد (ويزارد)
+    إنشاء طلب إلكتروني
 </a>
