--- a/orders/templates/orders/order_success.html
+++ b/orders/templates/orders/order_success.html
@@ -508,9 +508,9 @@
                     <i class="fas fa-list me-2"></i>
                     قائمة الطلبات
                 </a>
-                <a href="{% url 'orders:order_create' %}" class="btn btn-success btn-custom">
-                    <i class="fas fa-plus me-2"></i>
-                    طلب جديد
+                <a href="{% url 'orders:wizard_start' %}" class="btn btn-success btn-custom">
+                    <i class="fas fa-magic me-2"></i>
+                    إنشاء طلب إلكتروني
                 </a>
             </div>
         </div>
