--- a/orders/templates/orders/order_list.html
+++ b/orders/templates/orders/order_list.html
@@ -270,11 +270,11 @@ document.addEventListener('DOMContentLoaded', function() {
         <h2><i class="fas fa-shopping-cart"></i> الطلبات</h2>
         <div class="btn-group">
             <a href="{% url 'orders:wizard_start' %}" class="btn btn-success btn-lg">
-                <i class="fas fa-magic me-2"></i>إنشاء طلب جديد (ويزارد)
+                <i class="fas fa-magic me-2"></i>إنشاء طلب إلكتروني
             </a>
-            <a href="{% url 'orders:order_create' %}" class="btn btn-outline-primary">
-                <i class="fas fa-plus me-2"></i>الطريقة التقليدية
-            </a>
+            <button type="button" class="btn btn-outline-secondary" disabled title="تم إيقاف النظام التقليدي - استخدم الطلب الإلكتروني">
+                <i class="fas fa-ban me-2"></i>الطريقة التقليدية (متوقف)
+            </button>
         </div>
     </div>
 
